@@ -15,9 +15,13 @@ Next version
   line, which is highlighted on arrival.  Added a link back to the index page
   at the bottom of each HTML page.
 
+- Source files can have more than one dot in them (foo.test.py), and will be
+  treated properly while reporting.  Fixes `issue 46`_.
+  
 - Source files with DOS line endings are now properly tokenized for syntax
   coloring on non-DOS machines.  Fixes `issue  53`_.
 
+.. _issue 46: http://bitbucket.org/ned/coveragepy/issue/46
 .. _issue 53: http://bitbucket.org/ned/coveragepy/issue/53
 
 
